new designs for landing page added

--- a/resources/views/web/landing/index.twig
+++ b/resources/views/web/landing/index.twig
@@ -1,6 +1,8 @@
 {% extends "web/landing/layouts/main.twig" %}
 
-{% block styles %}{% endblock %}
+{% block styles %}
+<link href="/assets/css/tailwind.css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 	{% set principal = [] %}
