--- a/resources/views/web/landing/layouts/main.twig
+++ b/resources/views/web/landing/layouts/main.twig
@@ -6,7 +6,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<link
-		rel="shortcut icon" href="https://kapitals.org/assets/image/favicon.png"/>
+		rel="shortcut icon" href="{{ APP.API_APP_URL }}/assets/media/images/proideasicon.ico"/>
 		<!--begin::Fonts(mandatory for all pages)-->
 		<link
 		rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700"/>
@@ -20,7 +20,6 @@
 		<link href="/assets/web/css/landing.min.css" rel="stylesheet" type="text/css"/>
 		<style>
 			body {
-				;
 				/*background-image: linear-gradient( 95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64% );*/
 				/*background-image:linear-gradient( 95.2deg, rgba(217,252,234,1) 35.8%, rgba(194,229,246,1) 90% );*/
 			}
