--- a/resources/views/web/landing/partials/platform.twig
+++ b/resources/views/web/landing/partials/platform.twig
@@ -36,28 +36,23 @@
                 <div style="flex: 1; min-width: 0;">
                     <div class="d-flex flex-wrap gap-3 justify-content-center">
                         {% for item in banners %}
-                            {% set titles_to_skip = [
-                                'Aprende a calcular el costo de capital de tu empresa',
-                                'Aprende a valorizar tu empresa'
-                            ] %}
-                            {% if item.content_name not in titles_to_skip %}
                                 <div class="card bs-card-1 shadow" style="width: 280px; min-height: 420px;">
-                                    <div class="card-body d-flex flex-column" style="padding-bottom: 0 !important;">
+                                    <div class="card-body d-flex flex-column gap-2" style="padding-bottom: 0 !important;">
                                         <div class="bs-card-image mb-3">
                                             <a href="{{ item.content_url }}" target="_blank">
                                                 <img src="{{_company.host}}{{ item.imagens[0].patch }}" style="width: 100%; height: 150px; object-fit: contain; border-radius: 8px;"/>
                                             </a>
                                         </div>
-                                        <div class="bs-card-label mb-2">
+                                        <div class="bs-card-label mb-0">
                                             <div class="bs-card-label-text">
-                                                <span>{{ item.content_caption|raw }}</span>
+                                                <span>{{ item.content_name|raw }}</span>
                                             </div>
                                             {% if 'disabled' in disabled %}
                                                 <div class="bs-card-label-ribbon">Próximo</div>
                                             {% endif %}
                                         </div>
 										<ul style="padding-top: 10px;">
-                                        <li >{{ item.content_name|raw }}</li>
+                                        <li >{{ item.content_caption|raw }}</li>
 										</ul>
                                     </div>
                                     <div class="card-body border-0" style="padding-top: 0 !important;">
@@ -84,7 +79,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            {% endif %}
                         {% endfor %}
                     </div>
                 </div>
